--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -18,10 +18,9 @@ spring.datasource.driver-class-name=org.mariadb.jdbc.Driver
 spring.jpa.show-sql=true
 # Hibernate ddl auto (create, create-drop, update): with "create-drop" the database
 # schema will be automatically created afresh for every start of application
-#spring.jpa.hibernate.ddl-auto=create-drop
-spring.jpa.hibernate.ddl-auto=update
+spring.jpa.hibernate.ddl-auto=create-drop
+#spring.jpa.hibernate.ddl-auto=update
 spring.jpa.properties.hibernate.format_sql=true
-spring.jpa.database-platform=org.hibernate.dialect.MySQL8Dialect
 
 ## Naming strategy
 #spring.jpa.hibernate.naming.implicit-strategy=org.hibernate.boot.model.naming.ImplicitNamingStrategyLegacyHbmImpl
@@ -38,6 +37,7 @@ openai.api-key=
 openai.model=gpt-3.5-turbo
 openai.threads-url=https://api.openai.com/v1/threads
 openai.assistants-url=https://api.openai.com/v1/assistants
+openai.chat-url=https://api.openai.com/v1/chat/completions
 openai.assistant-instruction="You are an expert in geography, be helpful and concise."
 
 springdoc.api-docs.path=/api-docs
